Changed default admin page

--- a/ember/app/templates/index.hbs
+++ b/ember/app/templates/index.hbs
@@ -47,7 +47,7 @@
         {{#md-copyright text='Made with ❤ (and ♠, ♦, & ♣)'
         startYear=2015
         class='light-blue darken-2 white-text'}}
-            {{#link-to 'login' class="white-text right"}}Admin Panel{{/link-to}}
+            {{#link-to 'admin.questions' class="white-text right"}}Admin Panel{{/link-to}}
         {{/md-copyright}}
     </footer>
 
