changed header link location

--- a/ember/app/templates/admin.hbs
+++ b/ember/app/templates/admin.hbs
@@ -1,6 +1,6 @@
 <div id="template-admin" class="pageWrapper">
     <header class="light-blue lighten-2 black-text flex-item">
-        {{#md-navbar name='Quick Quiz Administration' class='light-blue darken-2' homeRoute='admin.dashboard'}}
+        {{#md-navbar name='Quick Quiz Administration' class='light-blue darken-2' homeRoute='admin.questions'}}
             {{#link-to 'admin.questions' tagName='li'}}
                 {{link-to 'Questions' 'admin.questions'}}
             {{/link-to}}
